<resources>
    <string name="app_name">Lesson Tab Tracker</string>
    <string name="app_version">0.0.1</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="no_students">You don\'t have any students</string>
    <string name="about_version">Version: %1$s</string>
    <string name="written_by">Written by Kyle Girard</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="student_avatar">Student Avatar</string>
    <string name="content_description_tab">Tab</string>
    <string name="content_description_time">Time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
