<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".student.NewStudentFragment"
>
    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imagebutton_avatar"
            app:layout_constraintHorizontal_bias="0.447" android:contentDescription="@string/student_avatar"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:id="@+id/textview_firstname" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/first_name" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/imagebutton_avatar"/>
    <TextView
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textview_lastname" android:hint="@string/last_name"
            app:layout_constraintTop_toBottomOf="@+id/textview_firstname" android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_save" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textview_lastname" app:layout_constraintHorizontal_bias="0.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>