<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/name">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp" tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="8dp" android:id="@+id/student_avatar_imageview"
            android:contentDescription="@string/student_avatar"/>
    <TextView
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:id="@+id/student_name" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" tools:text="Name" android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@+id/student_avatar_imageview" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" style="@style/student_title"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2" app:layout_constraintGuide_begin="102dp"
                                                android:orientation="horizontal"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/student_tab" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintStart_toEndOf="@+id/tab_imageview"
            android:layout_marginStart="16dp" tools:text="Tab" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/student_name" app:layout_constraintVertical_bias="0.044"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/student_minutes" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            tools:text="Minutes" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/student_name"
            app:layout_constraintVertical_bias="0.203"
            app:layout_constraintStart_toEndOf="@+id/minute_imageview" android:layout_marginStart="16dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_attach_money_black_24dp"
            android:id="@+id/tab_imageview"
            app:layout_constraintStart_toEndOf="@+id/student_avatar_imageview" android:layout_marginStart="12dp"
            android:contentDescription="@string/content_description_tab" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/student_name"/>
    <ImageView
            android:layout_width="24dp"
            android:layout_height="wrap_content" app:srcCompat="@drawable/ic_timer_black_24dp"
            android:id="@+id/minute_imageview"
            app:layout_constraintStart_toEndOf="@+id/student_tab"
            android:layout_marginStart="16dp" android:contentDescription="@string/content_description_time"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/student_name"
    />
</androidx.constraintlayout.widget.ConstraintLayout>